--- a/src/Stylesheet/main.css
+++ b/src/Stylesheet/main.css
@@ -1,93 +1,218 @@
-<template>
-  <header>
-    <div class="title">WATER CANVAS</div>
-    <div class="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </header>
-  <div  style="text-align: center; height:100%">
-    <div v-show="isLoading">
-      <div class="loader"></div>
-    </div>
-    <div  class="home" v-show="!isLoading">
-      <DrawCanvas></DrawCanvas>
-      <div class="menu">
-        <ColorSetting></ColorSetting>
-      </div>
-    </div>
-  </div>
-</template>
+.colorSection {
+  display: inline-flex;
+  /* max-width: ; */
+}
 
-<script lang="ts">
-import { defineComponent } from 'vue';
-import { ref, provide, reactive } from 'vue';
-import DrawCanvas from './components/DrawCanvas.vue'
-import ColorSetting from './components/ColorSetting.vue'
-import drawCircles from './tsfiles/drawCirclesClass'
-import colorSelector from './tsfiles/colorSelector';
-import { ProductKey } from './tsfiles/symbols';
-import $ from 'jquery';
+.style {
+  background: #f5f5f5;
+  box-shadow: 0.5rem 0.5rem 1.5rem #cccccc,-0.5rem -0.5rem 1.5rem #ffffff;
+}
 
-export default defineComponent({
-  name: 'Home',
-  components: {
-    DrawCanvas,
-    ColorSetting
-  },
-  setup() {
-    const CircleData = reactive<drawCircles[]>([])
-    const ColorData = reactive<colorSelector>({
-      blur: 0,
-      opacity: 0,
-      h: 0,
-      s: 0,
-      v: 0,
-    })
-    const WindowWidth = ref(window.innerWidth * 0.55)
-    const WindowHeight = ref(window.innerHeight * 0.85)
-    const SavedImageJudge = ref(false)
-    const mode = ref("canvas")
-    const canvasReset = ref(false)
-    const autoDraw = ref(false)
-    const blurValue = 0
-    const isLoading = ref(false)
-    const drawAnotherPicture = ref(false)
-    const CanDraw = ref(true)
-    provide('blurValue',blurValue);
-    // const postError = ref(true)
-    function disableScroll(event: any) {
-      event.preventDefault();
-    }
-    document.addEventListener('touchmove', disableScroll, { passive: false });
-    document.addEventListener('mousewheel', disableScroll, { passive: false });
-    provide('CircleData', CircleData)
-    provide('ColorData', ColorData)
-    provide('WindowWidth', WindowWidth)
-    provide('WindowHeight', WindowHeight)
-    provide('SavedImageJudge', SavedImageJudge)
-    provide('mode', mode)
-    provide('canvasReset', canvasReset)
-    provide('autoDraw', autoDraw)
-    provide('drawAnotherPicture', drawAnotherPicture)
-    provide('CanDraw', CanDraw)
-    provide(ProductKey, CircleData);
-    provide('isLoading', isLoading)
+.colors {
+  height: auto;
+  width: 80%;
+  border-radius: 3.125rem;
+  margin: 0 10%;
+  /* padding-top: 2.8rem; */
+  user-select: none;
+}
 
-    return {
-      isLoading,
-    }
-  },
-  mounted(){
-    $(".menuBtn").click(function () {
-      $(".menuBtn").toggleClass('active');
-      $('.menu').toggleClass('fade')
-    });
-  }
-})
-</script>
-<style>
+.picker {
+  height: 10rem;
+  margin: 2rem 15% 2rem 15%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-content: space-around;
+}
+
+.colorBox {
+  flex: 1 0 30%;
+
+  border-radius: .5rem;
+}
+
+.sample {
+  width: 2.8rem;
+  height: 1rem;
+  object-fit: cover;
+  margin-top: .5rem;
+  border-radius: .5rem;
+  box-shadow: 0.2rem 0.2rem .5rem #ccc,
+            -0.2rem -0.2rem .5rem #ffffff;
+}
+
+.color p {
+  font-size: 0.8rem;
+  text-shadow: .2rem .2rem .5rem #cccccc,
+}
+
+.toolBar {
+  margin: 0.5rem 15% 0.5rem 15%;
+}
+
+.bar {
+  width: 80%;
+  height: auto;
+  line-height: 2.125rem;
+  padding-left: 1.25rem;
+  margin-bottom: 1.25rem;
+  background-color: #f5f5f5;
+  box-shadow: inset 0.5rem 0.5rem 1.5rem #cccccc,inset -0.5rem -0.5rem 1.5rem #ffffff;
+  text-align: left;
+  border-radius: 1.25rem;
+}
+
+.changeArea {
+  margin: 0.5rem 15% 0.5rem 15%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.mode {
+  width: 40%;
+  background-color: #f5f5f5;
+}
+
+.change:hover {
+  box-shadow: inset 0.5rem 0.5rem 1.5rem #cccccc,inset -0.5rem -0.5rem 1.5rem #ffffff;
+  background-color: #fff;
+}
+
+.actions {
+  margin: 0.5rem 15%;
+}
+
+.action {
+  width: 100%;
+  background-color: #f5f5f5;
+}
+
+.btn {
+  height: auto;
+  line-height: 2rem;
+  margin-bottom: 0.625rem;
+  box-shadow: 0.5rem 0.5rem 1.5rem #cccccc,-0.5rem -0.5rem 1.5rem #ffffff;
+  text-align: center;
+  border-radius: 1.875rem;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.SNS {
+  width: 80%;
+  /* margin: 1.875rem 15%; */
+  text-align: center;
+  margin: 5% auto;
+}
+
+.SNS p {
+  font-size: 0.5rem;
+}
+
+.logos {
+  margin: 0.625rem auto;
+  width: 80%;
+  display: flex;
+}
+
+.logoFolder {
+  width: 40%;
+  /* height: 10em; */
+  margin: auto;
+}
+
+.logo {
+  height: 3.125rem;
+  width: 3.125rem;
+  /* float: left; */
+  box-shadow: 0.5rem 0.5rem 1.5rem #cccccc,-0.5rem -0.5rem 1.5rem #ffffff;
+  padding: 0.625rem;
+  border-radius: 1.25rem;
+  margin: auto;
+  justify-content: center;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #858585;
+  margin: 0;
+}
+
+.toggle {
+  position: relative;
+  width: 50%;
+  height: 2rem;
+  border-radius: 1.25rem;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0.5rem 0.5rem 1.5rem #cccccc,-0.5rem -0.5rem 1.5rem #ffffff;
+}
+.toggle input[type="checkbox"] {
+  display: none;
+}
+.toggle:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: #f2b6c5;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+}
+.toggle:after {
+  content: "CANVAS";
+  position: absolute;
+  top: 0.2rem;
+  left: 0.18rem;
+  width: 60%;
+  height: 80%;
+  display: block;
+  border-radius: 1.25rem;
+  background: #fff;
+  -webkit-transition: 0.2s ease-out;
+  transition: 0.2s ease-out;
+  text-align: center;
+  padding: 0.15rem 0 0;
+  font-size: 0.9rem;
+  font-weight: 700;
+  color: #f2b6c5;
+  box-sizing: border-box;
+}
+.toggle.checked:before {
+  background: #9ed5ff;
+}
+.toggle.checked:after {
+  content: "WATER";
+  left: 37%;
+  color: #9ed5ff;
+  padding: 0.15rem 0 0;
+}
+
+input[type=range]{
+  -webkit-appearance: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: red;
+  height: 2.125rem;
+  width: 5px;
+}
+
+
+@media only screen and (max-width: 599px){
+  .colorSection {
+  display: none;
+}
+}
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -379,5 +504,3 @@ canvas {
     opacity: 0.5;
   }
 }
-
-</style>
